--- a/Aufgabe4/css/stylesheet.css
+++ b/Aufgabe4/css/stylesheet.css
@@ -1,16 +1,28 @@
-body{ 
-    font-family: 'Courier New', Courier, monospace;
-    background-color: black;
+* {
+    box-sizing: border-box;
+    margin: 0%;
     padding: 0%;
-    margin:0%
+    background-color:black;
 }
 
-
-a {
-    color: beige;
-    font-family: monospace;
+li, a, button {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 500;
+    color:beige;
+    font-size:  20px;;
+    text-decoration: none;
+    justify-content: space-between;
 
 }
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+    
+}
+
 
 
 .bc.img img {
@@ -22,28 +34,71 @@ a {
     
 
 }
-header{
-    background-color: black;
-    color: beige;
-    border-image-width: 100%;
-}
-.words{
-    position: absolute;
-    top: 8px;
-    right:24px;
-    font-size: x-large;
-    word-spacing: 1.cm;
-   
-    
 
 
+
+.logo{
+    cursor: pointer;
+    margin-right: auto;
 }
-html{
-    border: 0%;
+
+.words {
+    list-style: none;
+}
+
+.words {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.words li a {
+    transition: all 0.3s ease 0s;
+}
+
+
+
+button {
+    padding: 9px 25px;
+    background-color:rgb(160, 63, 144);
+    border:none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    margin-bottom: 20px;
+}
+
+button :hover {
+    background-color: aqua;
+}
+.words a:hover{
+    color: aquamarine;
+
 }
 
 .title{
     color: beige;
-    align-items: center;
-    
+    font-family: 'Courier New', Courier, monospace;
+}
+
+* {
+    padding:0%;
+    margin:0%;
+    box-sizing: border-box;
+}
+
+.footerbox{
+    background-color: #eaeaea;
+    color: gray;
+    width: 100;
+    height: 200px;
+    padding: 0%;
+    text-align: center;
+}
+
+.brum{
+    width: 400px;
+    height:200px;
+    margin:5px;
+    padding:5px;
+    display: inline-block;
 }
